--- a/styles/style-section-footer.css
+++ b/styles/style-section-footer.css
@@ -1,7 +1,7 @@
 .footer {
   margin: 0;
   padding: 20px 0;
-  background-image: url("/assets/images/footer3.png");
+  background-image: url("../assets/images/footer3.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
