--- a/styles/style-thanks-page.css
+++ b/styles/style-thanks-page.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url('./assets/images/say4.jpg');
+    background-image: url('../assets/images/say4.jpg');
     background-size: cover;
     background-position: bottom;
   }
