--- a/styles/style-portfolio.css
+++ b/styles/style-portfolio.css
@@ -49,11 +49,17 @@
   justify-content: space-evenly;
 }
 
-.container__portfolio_cards img {
+.portfolio__card {
   width: 400px;
   height: 300px;
   box-shadow: 0px 0px transparent, 0px 5px 10px rgba(0, 0, 0, 0.7);
+  margin: 0;
 }
+.portfolio__card_img { 
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover;
+ }
 
 @media screen and (max-width: 1420px) {
 
@@ -77,9 +83,9 @@
 
 @media screen and (max-width: 500px) {
 
-  .container__portfolio_cards img {
-    max-width: 250px;
-    max-height: 311px;
+  .portfolio__card {
+    width: 250px;
+    height: 311px;
   }
 
   .article_img {
