--- a/styles/style-section-services.css
+++ b/styles/style-section-services.css
@@ -17,7 +17,7 @@
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   color: var(--white-color);
   font-size: 2rem;
   font-weight: 600;
@@ -51,15 +51,15 @@
 }
 
 .services_card:nth-child(1) {
-  background: url("../assets/images/design_out.jpg");
+  background: url("../assets/images/design_out2.jpg");
 }
 
 .services_card:nth-child(2) {
-  background: url("../assets/images/design_in.jpg");
+  background: url("../assets/images/design_in3.jpg");
 }
 
 .services_card:nth-child(3) {
-  background: url("../assets/images/recovery_out.jpg");
+  background: url("../assets/images/recovery_out2.jpg");
 }
 
 .services_card:nth-child(4) {
