--- a/styles/style-section-price.css
+++ b/styles/style-section-price.css
@@ -1,13 +1,13 @@
 .price_content_cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  justify-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   padding: 20px 0;
-  grid-gap: 20px;
+  gap: 20px;
 }
 
 .price_card {
-  width: 250px;
+  width: 270px;
   background: var(--white-color);
   padding: 30px 20px;
   box-shadow: var(--shadow);
@@ -44,5 +44,11 @@
   font-size: 1.4rem;
   font-weight: 300;
   line-height: 1.9rem;
+}
 
+@media screen and (max-width: 940px) {
+  .price_content_cards {   
+    justify-content: center;    
+    gap: 30px;
+  } 
 }
