--- a/styles/style-section-price.css
+++ b/styles/style-section-price.css
@@ -1,18 +1,18 @@
 .price_content_cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 20px 0;
-  gap: 20px;
+  justify-content: space-around;
+  padding: 2rem 0;
+  gap: 2rem;
 }
 
 .price_card {
-  width: 270px;
+  width: 27rem;
   background: var(--white-color);
-  padding: 30px 20px;
+  padding: 3rem 2rem;
   box-shadow: var(--shadow);
   border-radius: 7px;
-  gap: 15px;
+  gap: 1.5rem;
   justify-content: space-between;
 }
 
@@ -21,13 +21,13 @@
 }
 
 .box_item_card {
-  gap: 20px;
+  gap:  2rem ;
 }
 
 .price_card_img {
-  width: 200px;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
+  width: 20rem;
+  border-top-right-radius:  1rem ;
+  border-top-left-radius:  1rem ;
 }
 
 .price_card_title {
@@ -49,6 +49,6 @@
 @media screen and (max-width: 940px) {
   .price_content_cards {   
     justify-content: center;    
-    gap: 30px;
+    gap:  3rem ;
   } 
 }
