--- a/styles/style-contact.css
+++ b/styles/style-contact.css
@@ -1,7 +1,7 @@
 .contact_page_content {
   display: flex;
-  gap: 30px;
-  margin: 50px 0 0;
+  gap: 3rem;
+  margin: 5rem 0 0;
 }
 
 .section_title_contact {
@@ -23,12 +23,12 @@
 }
 
 .contact_item_img {
-  width: 50px;
+  width: 5rem;
 }
 
 .contact_item {
   display: flex;
-  gap: 30px;
+  gap: 3rem;
   align-items: center;
 }
 
@@ -36,7 +36,7 @@
 .box_contacts_all {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap:  2rem ;
 }
 
 .contact_item {
@@ -51,7 +51,7 @@
 }
 
 .steps_container {
-  margin: 50px 0 100px;
+  margin: 5rem 0  10rem ;
 }
 
 .details_tile {
@@ -63,7 +63,7 @@
 }
 
 .details_text {
-  margin: 20px 0;
+  margin:  2rem  0;
   font-size: 1.4rem;
   color: var(--color-text);
   line-height: 2.3rem;
@@ -76,21 +76,21 @@
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
-  gap: 15px;
+  gap:  1.5rem ;
 }
 
 .steps_img {
-  width: 100px;
-  height: 100px;
+  width:  10rem ;
+  height:  10rem ;
 }
 
 .card_step_details {
-  width: 180px;
+  width:  18rem ;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap:  2rem ;
 }
 
 .contact_logo_title {
@@ -108,17 +108,17 @@
 }
 
 .box_call {
-  margin-top: 50px;
+  margin-top: 5rem;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 50px;
+  padding-left: 5rem;
 }
 
-@media (max-width: 900px) {
+@media (max-width:  90rem ) {
   .contact_item_img {
-    width: 30px;
+    width: 3rem;
   }
 
   .contact_item {
@@ -152,7 +152,7 @@
   }
 
   .box_call {
-    padding-left: 10px;
+    padding-left:  1rem ;
   }
 
 }
