--- a/styles/style-header.css
+++ b/styles/style-header.css
@@ -1,7 +1,7 @@
 .header {
   position: fixed;
   width: 100%;
-  padding: 10px 0;
+  padding: 1rem 0 ;
   background-color: var(--white-color);
   box-shadow: var(--shadow);
   z-index: 5;
@@ -9,14 +9,14 @@
 
 .header_box {
   display: flex;
-  gap: 15px;
+  gap: 1.5rem;
   align-items: center;
   flex-wrap: nowrap;
-  width: 300px;
+  width: 30rem;
 }
 
 .header_logo_img {
-  width: 40px;
+  width: 4rem;
 }
 
 .header_logo_title {
@@ -39,6 +39,7 @@
   }
 }
 
+
 .header_nav {
   padding: 0;
   margin-left: auto;
@@ -47,7 +48,7 @@
 
 .header_list {
   display: flex;
-  gap: 15px;
+  gap: 1.5rem;
   flex-wrap: wrap;
   list-style: none;
   width: 100%;
@@ -83,8 +84,8 @@
   display: none;
   position: relative;
   color: var(--primary-color);
-  width: 30px;
-  height: 22px;
+  width: 3rem;
+  height: 2.2rem;
   transition: all 1s;
   z-index: 15;
   cursor: pointer;
@@ -98,7 +99,7 @@
   position: absolute;
   background-color: var(--second-color);
   border: 2px solid var(--second-color);
-  width: 30px;
+  width: 3rem;
   padding: 0;
   cursor: pointer;
 }
@@ -122,6 +123,8 @@
   left: 0;
 }
 
+
+ 
 @media (max-width: 520px) {
 
   .hamburger {
@@ -133,14 +136,14 @@
     position: fixed;
     z-index: 10;
     top: 0;
-    right: -320px;
+    right: -32rem;
     overflow-x: hidden;
     transition: 1s;
     display: block;
-    width: 320px;
+    width: 32rem;
     height: 100vh;
     background-color: rgb(54, 21, 11);
-    padding-top: 100px;
+    padding-top: 10rem;
     font-weight: 600;
     font-size: 2rem;
     line-height: 2.5rem;
@@ -161,6 +164,6 @@
   }
 
   .header_item {
-    margin: 30px 0;
+    margin: 3rem 0;
   }
 }
