--- a/styles/style-portfolio.css
+++ b/styles/style-portfolio.css
@@ -4,35 +4,35 @@
 
 .container__portfolio_btn {
   width: 100%;
-  margin: 60px auto;
+  margin:  6rem  auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap:  2rem ;
 }
 
 .article_portfolio {
   display: flex;
-  gap: 20px;
+  gap:  2rem ;
 }
 
 .article_img {
-  width: 50px;
-  height: 40px;
-  margin-top: 20px;
+  width:   5rem ;
+  height:  4rem ;
+  margin-top:  2rem ;
 }
 
 .margin_bottom {
-  margin-bottom: 40px;
+  margin-bottom:  4rem ;
 }
 
 .portfolio__btn {
-  min-width: 200px;
+  min-width:  20rem ;
   background-color: transparent;
   color: var(--color-gold);
   border: 1px solid var(--color-gold);
   box-sizing: border-box;
-  box-shadow: 0px 0px transparent, 0px 5px 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px transparent, 0px 5px  1rem  rgba(0, 0, 0, 0.7);
 }
 
 .btn.portfolio__btn.activ {
@@ -43,16 +43,17 @@
 .container__portfolio_cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap:  2rem ;
   max-width: 1400px;
   min-height: 1115px;
   justify-content: space-evenly;
+  margin: 0 auto;
 }
 
 .portfolio__card {
   width: 400px;
-  height: 300px;
-  box-shadow: 0px 0px transparent, 0px 5px 10px rgba(0, 0, 0, 0.7);
+  height:  30rem ;
+  box-shadow: 0px 0px transparent, 0px 5px  1rem  rgba(0, 0, 0, 0.7);
   margin: 0;
 }
 .portfolio__card_img { 
@@ -84,17 +85,17 @@
 @media screen and (max-width: 500px) {
 
   .portfolio__card {
-    width: 250px;
+    width:  25rem ;
     height: 311px;
   }
 
   .article_img {
-    width: 40px;
-    height: 30px;
+    width:  4rem ;
+    height:  3rem ;
   }
 
   .article_text {
-    margin: 15px 0;
+    margin:  1.5rem  0;
     font-size: 1.4rem;
     line-height: 2rem;
   }
