--- a/styles/style-privacy-pages.css
+++ b/styles/style-privacy-pages.css
@@ -2,20 +2,20 @@
   font-size: 2.4rem;
   font-weight: 800;
   text-align: center;
-  margin: 30px auto;
+  margin:  3rem  auto;
 }
 
 .title_policy {
   font-size: 2rem;
   color: var(--primary-color);
   font-weight: 600;
-  margin: 20px auto;
+  margin:  2rem  auto;
 }
 
 .text_policy {
   font-size: 1.6rem;
   line-height: 2.2rem;
-  text-indent: 20px;
+  text-indent:  2rem ;
   font-weight: 400;
   text-align: justify;
   font-family: "Open Sans", sans-serif;
