--- a/styles/style-section-footer.css
+++ b/styles/style-section-footer.css
@@ -1,6 +1,6 @@
 .footer {
   margin: 0;
-  padding: 20px 0;
+  padding:  2rem  0;
   background-image: url("../assets/images/footer3.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -27,17 +27,17 @@
 .footer_logo_box {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap:  1.5rem ;
 }
 
 .icon_footer {
-  width: 30px;
+  width:  3rem ;
   height: 100%;
 }
 
 .contact_email {
   display: flex;
-  gap: 10px;
+  gap:  1rem ;
   font-weight: 500;
   align-items: center;
   font-size: 1.4rem;
@@ -55,7 +55,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 110px;
+  height:  11rem ;
 }
 
 .mobile_version {
@@ -71,7 +71,7 @@
 .footer_nav {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap:  1rem ;
 }
 
 address {
@@ -112,12 +112,12 @@ address {
 
   .contacts_box_title {
     font-size: 1.4rem;
-    margin-bottom: 15px;
+    margin-bottom:  1.5rem ;
   }
 
   .footer_contacts {
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap:  4rem ;
   }
 }
