--- a/styles/style-section-intro.css
+++ b/styles/style-section-intro.css
@@ -4,7 +4,7 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 120px 0 200px;
+  padding: 14rem 0 20rem;
 }
 
 .intro_content {
@@ -12,7 +12,7 @@
 }
 
 .intro_content_title {
-  font-size: 5rem;
+  font-size: 5rem ;
   font-weight: 700;
   line-height: 5.5rem;
   text-align: center;
@@ -29,7 +29,7 @@
 }
 
 .intro_content_button {
-  margin-top: 45px;
+  margin-top: 5rem ;
   display: flex;
   justify-content: center;
 }
@@ -50,12 +50,12 @@
   }
 
   .intro {
-    padding: 120px 0 100px;
+    padding: 12rem 0 10rem;
   }
 
 }
 
-@media (max-width: 350px) {
+@media (max-width:  35rem ) {
   .intro_content_title {
     font-size: 3.2rem;
     line-height: 4rem;
