--- a/styles/style-section-order.css
+++ b/styles/style-section-order.css
@@ -4,9 +4,9 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 200px 0;
-  min-height: 900px;
-  margin-top: 70px;
+  padding:  20rem  0;
+  min-height:  90rem ;
+  margin-top:  7rem ;
   color: var(--primary-color);
 }
 
@@ -22,9 +22,9 @@
 .section_order_title {
   font-size: 3rem;
   font-weight: 700;
-  line-height: 37px;
+  line-height:  3.7rem ;
   color: var(--primary-color);
-  margin-bottom: 40px;
+  margin-bottom:  4rem ;
 }
 
 .section_order_title span {
@@ -34,22 +34,22 @@
 .section_order_text {
   font-size: 2rem;
   font-weight: 400;
-  line-height: 24px;
+  line-height:  2.4rem ;
 }
 
 .section_order_list {
-  margin: 10px auto;
-  padding-left: 20px;
+  margin:  1rem  auto;
+  padding-left:  2rem ;
 }
 
 /** form**/
 
 .contacts__item {
-  width: 350px;
+  width:  35rem ;
   margin: 0 0 0 auto;
-  padding: 20px 25px;
+  padding:  2rem   2.5rem ;
   background-color: var(--white-color);
-  border-radius: 15px;
+  border-radius:  1.5rem ;
   box-shadow: var(--shadow);
 }
 
@@ -61,18 +61,18 @@
 
 .contact_text {
   font-size: 1.4rem;
-  margin: 15px 0 0;
+  margin:  1.5rem  0 0;
 }
 
 .email_form,
 .tel_form,
 .name_form {
-  height: 40px;
+  height:  4rem ;
   width: 100%;
   border: none;
   border-bottom: 2px solid var(--color-gold);
-  margin-top: 20px;
-  padding: 3px 20px;
+  margin-top:  2rem ;
+  padding: 3px  2rem ;
   color: var(--primary-color);
   font-size: 1.6rem;
 }
@@ -92,28 +92,28 @@
 .container_checkbox {
   display: flex;
   align-items: center;
-  gap: 15px;
-  margin-top: 20px;
+  gap:  1.5rem ;
+  margin-top:  2rem ;
 }
 
 .label_checkbox {
   color: var(--primary-gold);
   font-size: 1.4rem;
-  margin-bottom: 20px;
+  margin-bottom:  2rem ;
 }
 
 
 @media (max-width: 1000px) {
   .section_order {
-    padding: 80px 0 100px;
+    padding:  8rem  0  10rem ;
     background-image: url("../assets/images/white2.png");
-    margin-bottom: 100px;
+    margin-bottom:  10rem ;
   }
 
   .container_order {
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap:  4rem ;
   }
 
   .box_order_title {
@@ -121,7 +121,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    margin-top:  3rem ;
   }
 
   .contacts__item {
@@ -129,7 +129,7 @@
   }
 
   .section_order_title {
-    margin-bottom: 20px;
+    margin-bottom:  2rem ;
     text-align: center;
   }
 
@@ -153,14 +153,14 @@
   }
 
   .section_order {
-    padding: 40px 0 80px;
+    padding:  4rem  0  8rem ;
   }
 }
 
 @media (max-width: 450px) {
   .contacts__item {
     width: 280px;
-    padding: 20px 20px;
+    padding:  2rem   2rem ;
   }
 
   .contact_title {
@@ -170,7 +170,7 @@
   .email_form,
   .tel_form,
   .name_form {
-    height: 35px;
+    height:  3.5rem ;
     font-size: 1.4rem;
   }
 
