--- a/styles/style-section-partner.css
+++ b/styles/style-section-partner.css
@@ -7,8 +7,8 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 1.5rem;
-    padding: 50px 0;
-    margin-bottom: 70px;
+    padding:   5rem  0;
+    margin-bottom:  7rem ;
 }
 
 @media screen and (max-width: 500px) {
