--- a/styles/style-section-services.css
+++ b/styles/style-section-services.css
@@ -1,6 +1,6 @@
 .services {
   width: 100%;
-  padding: 50px 0;
+  padding: 5rem 0;
 }
 
 .services_content_cards {
@@ -8,12 +8,12 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-gap: 30px;
-  margin: 50px 0;
+  grid-gap: 3rem;
+  margin: 5rem 0;
 }
 
 .services_card {
-  height: 300px;
+  height: 30rem;
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
@@ -21,7 +21,7 @@
   color: var(--white-color);
   font-size: 2rem;
   font-weight: 600;
-  padding: 80px 0 50px;
+  padding: 8rem 0 5rem;
 }
 
 .services_card:before,
@@ -69,7 +69,7 @@
 
 @media (max-width: 768px) {
   .services_card {
-    height: 250px;
+    height: 25rem;
     font-size: 1.8rem;
   }
 }
