--- a/style.css
+++ b/style.css
@@ -68,7 +68,22 @@
 html {
   font-size:  1rem ;
 }
-@media (min-width: 1500px) {
+@media (min-width: 2401px) {
+  html {
+    font-size: 20px;
+  }
+}
+@media (min-width: 2201px) and (max-width: 2400px){
+  html {
+    font-size: 18px;
+  }
+}
+@media (min-width: 1901px) and (max-width: 2200px){
+  html {
+    font-size: 16px;
+  }
+}
+@media (min-width: 1500px) and (max-width: 1900px){
   html {
     font-size: 14px;
   }
